# stapel-attributes

./: .gitignore  CHANGELOG.md  CONFIG.MD  CONTRIBUTING.md  MODULE.md  README.md  SECURITY.md  __init__.py  base.py  conf.py  config_form.py  conftest.py  errors.py  exceptions.py  profile_bridge.py  pyproject.toml  registry.py  results.py  serializers.py  validation.py  widgets.py
.github/workflows/: ci.yml  publish.yml
docs/: capabilities.json
static/stapel_attributes/: admin-tokens.css  attributes-admin.js
static_src/: LOGIC-NOTES.md  build.mjs  package-lock.json  package.json  strip-auto-define.mjs  tsconfig.json  tsconfig.lib.json  vitest.config.ts  vitest.globalSetup.mjs
static_src/src/: builds-django.test.ts  builds-lib.test.ts  config-editor.test.ts  config-editor.ts  error-codes.test.ts  error-codes.ts  golden.test.ts  index.ts  lib.ts  registry.test.ts  registry.ts  test-dialog.ts  types.ts
tests/: sample_types.py  sample_types_module.py  test_config_form.py  test_convertible_unit.py  test_feature_types.py  test_golden.py  test_profile_bridge.py  test_public_api.py  test_registry.py  test_review_fixes.py  test_validation.py  test_widgets.py
tests/golden/: declarations.json  error_codes.json
types/: __init__.py
types/bool/: __init__.py  config.py  dao.py  dto.py  type.py
types/convertible_unit/: __init__.py  config.py  constants.py  dao.py  dto.py  type.py
types/date/: __init__.py  config.py  dao.py  dto.py  type.py
types/float/: __init__.py  config.py  dao.py  dto.py  type.py
types/header/: __init__.py  config.py  constants.py  dao.py  dto.py  type.py
types/hex_color/: __init__.py  config.py  constants.py  dao.py  dto.py  type.py
types/hierarchical_select/: __init__.py  config.py  dao.py  dto.py  type.py
types/int/: __init__.py  config.py  (+3 more)
(+49 files in other folders)
