[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stapel-attributes"
version = "0.3.4"
description = "Typed attributes engine for the Stapel framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "stapel", "attributes"]
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "stapel-core>=0.10,<0.12",
    "djangorestframework>=3.14",
    "djangorestframework-dataclasses>=1.2",
    "drf-polymorphic>=2.1,<3",
    "drf-spectacular>=0.27",
]

[project.optional-dependencies]
all = []

[tool.setuptools]
package-dir = {"stapel_attributes" = "."}
packages = [
    "stapel_attributes",
    "stapel_attributes.types",
    "stapel_attributes.types.int",
    "stapel_attributes.types.float",
    "stapel_attributes.types.string",
    "stapel_attributes.types.bool",
    "stapel_attributes.types.hex_color",
    "stapel_attributes.types.select",
    "stapel_attributes.types.date",
    "stapel_attributes.types.header",
    "stapel_attributes.types.hierarchical_select",
    "stapel_attributes.tests",
]

[tool.setuptools.package-data]
stapel_attributes = [
    "py.typed",
    # Committed admin bundle (built from static_src/ — consumers need no node).
    "static/stapel_attributes/*.js",
    "static/stapel_attributes/*.css",
    "static/stapel_attributes/locales/*.json",
]

[tool.pytest.ini_options]
django_find_project = false
addopts = "--tb=short -q --import-mode=importlib"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/migrations/*",
]
